Fix code color in dark mode

--- a/scss/base/generic.scss
+++ b/scss/base/generic.scss
@@ -66,7 +66,7 @@ mark {
 
 code {
   background-color: var(--color-contrast-lowest);
-  // color: var(--color-danger);
+  color: var(--color-contrast-higher);
   font-size: 0.875em;
   padding: var(--space-xxxs) var(--space-xs);
 }
@@ -81,7 +81,7 @@ pre {
 
   code {
     background-color: transparent;
-    // color: currentColor;
+    color: currentColor;
     font-size: 1em;
     padding: 0;
   }
